# rme

./: .gitignore  CMakeLists.txt  CMakePresets.json  menubar.xml  vcpkg.json
data/: menubar.xml
editor/: README.txt  borders.xml  creatures.xml  doodads.xml  grounds.xml  materials.xml  menubar.xml  tilesets.xml  walls.xml
icons/: refresh_zone.xpm
source/: CMakeLists.txt  about_window.cpp  about_window.h  action.cpp  action.h  actions_history_window.cpp  actions_history_window.h  application.cpp  application.h  artprovider.cpp  artprovider.h  basemap.cpp  basemap.h  bitset.h  browse_tile_window.cpp  browse_tile_window.h  brush.cpp  brush.h  brush_enums.h  brush_tables.cpp  carpet_brush.cpp  carpet_brush.h  client_version.cpp  client_version.h  common.cpp  common.h  common_windows.cpp  common_windows.h  complexitem.h  const.h  container_properties_window.cpp  container_properties_window.h  copybuffer.cpp  copybuffer.h  creature.cpp  creature.h  creature_brush.cpp  creature_brush.h  creatures.cpp  creatures.h  (+133 more)
tools/: cvtmaterials.py  embedpngs.py  itemmap.json
